# cmake-project-template

./: .travis.yml  CMakeLists.txt  README.md  build-and-run
src/: CMakeLists.txt
src/division/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: divider_tests.cpp
