cmake_minimum_required(VERSION 3.2)
project(division C CXX)

set(SOURCE_FILES
    division.h
    division.cpp
)

add_library(${PROJECT_NAME} SHARED STATIC ${SOURCE_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC $<INSTALL_INTERFACE:${PROJECT_INSTALL_INCLUDE_DIR}>)
install(FILES division.h DESTINATION ${PROJECT_INSTALL_INCLUDE_DIR})
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-config DESTINATION ${PROJECT_INSTALL_LIB_DIR})
install(EXPORT ${PROJECT_NAME}-config DESTINATION ${PROJECT_INSTALL_LIB_DIR}/cmake/${PROJECT_NAME})
